<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/background"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/white_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quit_title"
        android:text="@string/exit_text"
        android:textSize="30sp"
        style="@style/category_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yes_button"
        android:text="@string/yes"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/quit_title"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintEnd_toStartOf="@id/no_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        android:text="@string/no"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toEndOf="@id/yes_button"
        app:layout_constraintTop_toTopOf="@id/yes_button"
        tools:layout_editor_absoluteY="382dp" />
</androidx.constraintlayout.widget.ConstraintLayout>