<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/background"
        android:layout_width="350dp"
        android:layout_height="360dp"
        android:scaleType="fitXY"
        android:src="@drawable/white_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_title"
        android:text="@string/your_score"
        android:textSize="48sp"
        style="@style/category_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"/>

    <TextView
        android:id="@+id/time"
        android:textSize="48sp"
        style="@style/category_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/result_title"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"/>

    <TextView
        android:id="@+id/edittext_title"
        style="@style/category_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:text="@string/enter_your_name"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"/>

    <EditText
        android:id="@+id/name_et"
        style="@style/category_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="24sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="text"
        android:background="@drawable/white_rectangle"
        app:layout_constraintTop_toBottomOf="@id/edittext_title"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        style="@style/save_button"
        android:layout_width="160dp"
        android:layout_height="83dp"
        android:layout_marginBottom="18dp"
        android:text="@string/save"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"/>

</androidx.constraintlayout.widget.ConstraintLayout>